--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 django = "~=3.2.0"
 django-environ = "*"
 whitenoise = "*"
+pre-commit = "*"
 
 [requires]
 python_version = "3.8"
