--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.15.4",
+    "formik": "^2.2.6",
+    "formik-antd": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.15.2",
@@ -20,7 +22,8 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
