--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "~=3.2.0"
 django-environ = "*"
 whitenoise = "*"
 pre-commit = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.8"
