--- a/.github/workflows/netlify_deploy.yml
+++ b/.github/workflows/netlify_deploy.yml
@@ -15,8 +15,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "14.16.0"
-      - run: npm install
-      - run: npm run build --if-present
+
+      - name: npm install
+        run: npm install
+        working-directory: "./client"
+
+      - name: npm run build
+        run: npm run build --if-present
         working-directory: "./client"
 
       - name: Deploy Netlify
