--- a/.github/workflows/netlify_deploy.yml
+++ b/.github/workflows/netlify_deploy.yml
@@ -18,11 +18,11 @@ jobs:
 
       - name: npm install
         run: npm install
-        working-directory: "./client"
+        working-directory: ./client
 
       - name: npm run build
         run: npm run build --if-present
-        working-directory: "./client"
+        working-directory: ./client
 
       - name: Deploy Netlify
         uses: netlify/actions/cli@master
