--- a/.github/workflows/netlify_deploy.yml
+++ b/.github/workflows/netlify_deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     name: "Deploy to Netlify"
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
