feat: added netlify deploy ci

--- a/.github/workflows/netlify_deploy.yml
+++ b/.github/workflows/netlify_deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: npm install
         working-directory: ./client
-        run: npm install --no-optional
+        run: npm install -f
 
       - name: npm run build
         working-directory: ./client
