--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.15.4",
+    "axios": "^0.21.1",
     "formik": "^2.2.6",
     "formik-antd": "^2.0.1",
     "react": "^17.0.2",
