--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -21,7 +21,7 @@ jobs:
           node-version: "14.16.0"
 
       - name: npm install
-        run: npm install
+        run: npm install -f
         working-directory: ./client
 
       - name: build test
