--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ djangorestframework = "*"
 gunicorn = "*"
 psycopg2-binary = "*"
 dj-database-url = "*"
+requests = "*"
+simplejson = "*"
 
 [requires]
 python_version = "3.8"
