--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,8 @@ on:
       - main
   pull_request:
 
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -42,7 +40,7 @@ jobs:
 
       - name: Install dependencies
         env:
-          PIPENV_NOSPIN: 'true'
+          PIPENV_NOSPIN: "true"
           WORKON_HOME: ~/.local/share/virtualenvs
           PIPENV_CACHE_DIR: ~/.local/share/pipcache
         run: |
