--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ psycopg2-binary = "*"
 dj-database-url = "*"
 requests = "*"
 simplejson = "*"
+fake-useragent = "*"
 
 [requires]
 python_version = "3.8"
