feat: added scraper server

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ coverage.xml
 mailer/lib/
 mailer/node_modules/
 mailer/package-lock.json
+
+# scraper
+scraper/src/firebase-keys.json
+scraper/lib
