--- a/scraper/package.json
+++ b/scraper/package.json
@@ -4,13 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "cheerio": "^1.0.0-rc.9"
+    "cheerio": "^1.0.0-rc.9",
+    "express": "^4.17.1",
+    "firebase-admin": "^9.7.0",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/cheerio": "^0.22.28",
+    "@types/express": "^4.17.11",
+    "@types/uuid": "^8.3.0",
+    "typescript": "^4.2.4"
   }
 }
