--- a/mailer/package.json
+++ b/mailer/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.7.1"
+    "amqplib": "^0.7.1",
+    "axios": "^0.21.1",
+    "nodemailer": "^6.6.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.5.17",
+    "@types/axios": "^0.14.0",
+    "@types/nodemailer": "^6.4.1",
     "prettier": "^2.2.1"
   }
 }
