--- a/scraper/firebase.json
+++ b/scraper/firebase.json
@@ -7,6 +7,10 @@
       "enabled": true
     }
   },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
   "functions": {
     "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run build"]
   }
