--- a/scraper/functions/package.json
+++ b/scraper/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.9",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.28",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.3",
     "@types/uuid": "^8.3.0",
     "firebase-functions-test": "^0.2.0",
