--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.15.4",
     "axios": "^0.21.1",
+    "firebase": "^8.5.0",
     "formik": "^2.2.6",
     "formik-antd": "^2.0.1",
     "react": "^17.0.2",
