--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "node ./scripts/create-env.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
