--- a/mailer/package.json
+++ b/mailer/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "amqplib": "^0.7.1",
     "axios": "^0.21.1",
-    "nodemailer": "^6.6.0"
+    "nodemailer": "^6.6.0",
+    "pm2": "^4.5.6"
   },
   "devDependencies": {
     "@types/amqplib": "^0.5.17",
