--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           pipenv run python manage.py test
         env:
-          DJANGO_SETTINGS_MODULE: jabme.app.settings.prod
+          DJANGO_SETTINGS_MODULE: app.settings.prod
 
       - name: QA Tests
         run: |
