--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,27 +4,27 @@ services:
   client:
     build:
       context: ./client
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     env_file: ./client/.env
     depends_on:
       - web
+    volumes:
+      - /app/node_modules
+      - ./client:/app
   web:
     build:
-      context: ./jabme
-      dockerfile: Dockerfile
-    command: gunicorn app.wsgi:application --bind 0.0.0.0:8000
-    expose:
-      - 8000
+      context: .
+      dockerfile: jabme/Dockerfile
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - ./jabme:/usr/src/app
+    ports:
+      - "8000:8000"
     env_file:
-      - ./.env.prod
+      - ./.env.dev
     depends_on:
       - db
-      - mailer
     restart: always
-  mailer:
-    build:
-      context: ./mailer
-      dockerfile: Dockerfile
   db:
     image: postgres:12.0-alpine
     volumes:
@@ -32,7 +32,11 @@ services:
     environment:
       - POSTGRES_USER=jabme
       - POSTGRES_PASSWORD=jabme
-      - POSTGRES_DB=jabme_prod
+      - POSTGRES_DB=jabme_dev
+  mailer:
+    build:
+      context: ./mailer
+      dockerfile: Dockerfile
   nginx:
     build:
       context: ./nginx
@@ -41,6 +45,5 @@ services:
     depends_on:
       - web
       - client
-
 volumes:
   postgres_data:
