--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,7 @@
+upstream client {
+    server client:3000;
+}
+
 upstream jabme {
     server web:8000;
 }
@@ -6,8 +10,22 @@ server {
 
     listen 80;
 
-    location / {
+    location /api {
         proxy_pass http://jabme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /sockjs-node {
+        proxy_pass http://client;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+    }
+
+    location / {
+        proxy_pass http://client;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
