--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,10 @@ server {
         proxy_redirect off;
     }
 
+    location /staticfiles/ {
+        alias /home/app/web/staticfiles/;
+    }
+
     location /sockjs-node {
         proxy_pass http://client;
         proxy_http_version 1.1;
