--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,10 @@ services:
   web:
     build:
       context: ./jabme
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     command: gunicorn app.wsgi:application --bind 0.0.0.0:8000
+    volumes:
+      - static_volume:/home/app/web/staticfiles
     expose:
       - 8000
     env_file:
@@ -36,6 +38,8 @@ services:
   nginx:
     build:
       context: ./nginx
+    volumes:
+      - static_volume:/home/app/web/staticfiles
     ports:
       - 3000:80
     depends_on:
@@ -44,3 +48,4 @@ services:
 
 volumes:
   postgres_data:
+  static_volume:
