--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,13 @@ server {
         proxy_redirect off;
     }
 
+    location /admin {
+        proxy_pass http://jabme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
     location /staticfiles/ {
         alias /home/app/web/staticfiles/;
     }
