--- a/mailer/package.json
+++ b/mailer/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "amqplib": "^0.7.1",
     "axios": "^0.21.1",
+    "mailgun-js": "^0.22.0",
     "nodemailer": "^6.6.0",
     "pm2": "^4.5.6"
   },
   "devDependencies": {
     "@types/amqplib": "^0.5.17",
     "@types/axios": "^0.14.0",
+    "@types/mailgun-js": "^0.22.11",
     "@types/nodemailer": "^6.4.1",
     "prettier": "^2.2.1"
   }
