Enable logging, fix django error on reg

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     build:
       context: ./jabme
       dockerfile: Dockerfile.prod
-    command: gunicorn app.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn app.wsgi:application --bind 0.0.0.0:8000 -c gunicorn.conf.py --enable-stdio-inheritance --log-level=info
     volumes:
       - static_volume:/home/app/web/staticfiles
     expose:
