--- a/jabme/Dockerfile.prod
+++ b/jabme/Dockerfile.prod
@@ -42,6 +42,8 @@ ENV HOME=/home/app
 ENV APP_HOME=/home/app/web
 RUN mkdir $APP_HOME
 RUN mkdir $APP_HOME/staticfiles
+RUN mkdir $APP_HOME/logs
+RUN mkdir $APP_HOME/logs/gunicorn
 WORKDIR $APP_HOME
 
 # install dependencies
