--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,7 @@ upstream jabme {
 server {
 
     listen 80;
+    server_name covaccinate.tech;
 
     location /api {
         proxy_pass http://jabme;
