--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,8 +8,11 @@ upstream jabme {
 
 server {
 
-    listen 80;
+    listen 443;
     server_name covaccinate.tech;
+
+    ssl_certificate /etc/nginx/certs/certificate.crt;
+    ssl_certificate_key /etc/nginx/certs/private.key;
 
     location /api {
         proxy_pass http://jabme;
