--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,10 @@ server {
     ssl_certificate /etc/nginx/certs/certificate.crt;
     ssl_certificate_key /etc/nginx/certs/private.key;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location /api {
         proxy_pass http://jabme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
