--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,8 +11,8 @@ server {
     listen 443;
     server_name covaccinate.tech;
 
-    ssl_certificate /etc/nginx/certs/certificate.crt;
-    ssl_certificate_key /etc/nginx/certs/private.key;
+    ssl_certificate /etc/nginx/certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
