--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,8 +3,8 @@ FROM nginx:1.19.0-alpine
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx.conf /etc/nginx/conf.d
 
-# COPY docker/nginx/certs/private.key /etc/nginx/certs/private.key
-# COPY docker/nginx/certs/certificate.crt /etc/nginx/certs/certificate.crt
+COPY /etc/letsencrypt/live/covaccinate.tech/fullchain.pem /etc/nginx/certs/fullchain.pem
+COPY /etc/letsencrypt/live/covaccinate.tech/privkey.pem /etc/nginx/certs/privkey.pem
 
 # VOLUME [ "/etc/nginx" ]
 # VOLUME [ "/etc/nginx/certs" ]
