ssl please work :cry:

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -6,5 +6,5 @@ COPY nginx.conf /etc/nginx/conf.d
 COPY /etc/letsencrypt/live/covaccinate.tech/fullchain.pem /etc/nginx/certs/fullchain.pem
 COPY /etc/letsencrypt/live/covaccinate.tech/privkey.pem /etc/nginx/certs/privkey.pem
 
-# VOLUME [ "/etc/nginx" ]
-# VOLUME [ "/etc/nginx/certs" ]
+VOLUME [ "/etc/nginx" ]
+VOLUME [ "/etc/nginx/certs" ]
