--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,11 +8,12 @@ upstream jabme {
 
 server {
 
-    listen 443;
+    # listen 80;
+    listen 443 ssl;
     server_name covaccinate.tech;
 
-    ssl_certificate /etc/nginx/certs/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/privkey.pem;
+    ssl_certificate /etc/nginx/certs/certificate.crt;
+    ssl_certificate_key /etc/nginx/certs/private.key;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
