--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,8 +7,12 @@ upstream jabme {
 }
 
 server {
+    listen 80;
+    server_name covaccinate.tech;
+    return 301 https://$server_name$request_uri;
+}
 
-    # listen 80;
+server {
     listen 443 ssl;
     server_name covaccinate.tech;
 
