Commented out the entrypoint line from production Dockerfile

--- a/jabme/Dockerfile.prod
+++ b/jabme/Dockerfile.prod
@@ -65,4 +65,4 @@ RUN chown -R app:app $APP_HOME
 USER app
 
 # run entrypoint.prod.sh
-ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
+# ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
