--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - 8000
     env_file:
       - ./.env.prod
+    environment:
+      ALLOWED_IPS: http://mailer
     depends_on:
       - mailer
     restart: always
