feat: nginx fix

--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -1,8 +1,8 @@
-upstream client {
+upstream clientDev {
     server client:3000;
 }
 
-upstream jabme {
+upstream jabmeDev {
     server web:8000;
 }
 
@@ -11,14 +11,14 @@ server {
     listen 80;
 
     location /api {
-        proxy_pass http://jabme;
+        proxy_pass http://jabmeDev;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
     location /admin {
-        proxy_pass http://jabme;
+        proxy_pass http://jabmeDev;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
@@ -29,14 +29,14 @@ server {
     }
 
     location /sockjs-node {
-        proxy_pass http://client;
+        proxy_pass http://clientDev;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
     }
 
     location / {
-        proxy_pass http://client;
+        proxy_pass http://clientDev;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
